Updates to Course and Lesson to make the creation and management possible